# vendix

./: .gitignore  README.md
orchestrator/: Makefile  alembic.ini  docker-compose.yml  pyproject.toml
orchestrator/adapters/flask/: app.py
orchestrator/application/: commands.py  errors.py  handlers.py
orchestrator/domain/: models.py  repo.py
orchestrator/infra/alembic/versions/: 29a0be5cd0a3_create_purchase_table.py  6e0fef1de918_create_machines_table.py
orchestrator/infra/orm/: connection.py  models.py  repo.py
orchestrator/seedwork/: test_utils.py
orchestrator/seedwork/application/: bus.py  conf.py  interfaces.py  resolvers.py  types.py
orchestrator/tests/: e2e_test.py  integration_test.py  setup.py
vending/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml  readme.md
vending/adapters/flask/: app.py
vending/application/: commands.py  handlers.py
vending/domain/: errors.py  models.py  repo.py  valueobjects.py
vending/infra/: redis.py  repo.py
vending/seedwork/: domain.py
vending/seedwork/application/: conf.py  types.py
vending/seedwork/tests/: application_test.py
vending/tests/: e2e_test.py  fixtures.py  integration_test.py  unit_test.py
