[tool.poetry]
name = "orchestrator"
description = "orchestrator service"
version = "0.1.0"
authors = ["Mohammad Hosseini <hosseini.mohamad94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
gunicorn = "^20.1.0"
alembic = "^1.10.4"
psycopg2-binary = "^2.9.6"
sqlalchemy = "^2.0.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]


markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end to end tests",
    "this: this is useful for whenever you are working on a specific testcase"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
